--- a/README
+++ b/README
@@ -9,6 +9,9 @@ so, if you type (in the folder with in.txt out.txt err.txt, but no dne.txt)
 --command 0 2 3 cat
 Since the wronly assigment of dne.txt (at fd positon 1) is skipped and 1 becomes invalid, the first command gets skipped over, but the second command works just as intended (get the input from in.txt, output to out.txt, error to err.txt)
 
+Also, I have specified the command option so that three file desriptors passed in must be a different ones. If one of them is same as the other, the command is looked to be invalid and therefore is skipped.
+
+
 Test Cases
 I checked the basics with the test cases, since more advanced testing was done on TA's script.
 Test case 1 tests if normal in/out works
